[package]
name = "gba-image-macros"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# Waiting on PR: https://github.com/vitiral/build_const/pull/4
build_const = {git = "https://github.com/Hpmason/build_const"}
byteorder = "1.4"